force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Scheduled_Hours_Incl_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Scheduled_Hours_Incl_Sub_Tasks__c</fullName>
    <description>The sum of Scheduled Hours + Sub Tasks Scheduled Hours</description>
    <formula>Krow__Scheduled_Hours__c + Krow__Sub_Tasks_Scheduled_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of Scheduled Hours + Sub Tasks Scheduled Hours</inlineHelpText>
    <label>Total Task Sch Hours (Incl Sub Tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>