force-app/main/default/objects/Krow__Task__c/fields/Krow__TotalHours__c.field-meta.xml
<CustomField>
    <fullName>Krow__TotalHours__c</fullName>
    <description>Deprecated field no longer in use.</description>
    <inlineHelpText>Deprecated field no longer in use.</inlineHelpText>
    <label>Deprecated4</label>
    <summarizedField>Krow__Task_Time__c.Krow__Hours__c</summarizedField>
    <summaryForeignKey>Krow__Task_Time__c.Krow__Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>