force-app/main/default/objects/Krow__Task__c/fields/Krow__Variance__c.field-meta.xml
<CustomField>
    <fullName>Krow__Variance__c</fullName>
    <description>The calculated difference between Task Estimated Hours - Total Task Scheduled Hours.</description>
    <formula>Krow__Estimated_Hours__c - Krow__Scheduled_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated difference between Task Estimated Hours - Total Task Scheduled Hours.</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>