force-app/main/default/objects/Krow__Task__c/fields/Krow__Visibility__c.field-meta.xml
<CustomField>
    <fullName>Krow__Visibility__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>The default is  All, but could be Internal or Customer. The Guest user would see &quot;All&quot; and &quot;Customer&quot;.</description>
    <inlineHelpText>The default is  All, but could be Internal or Customer. The Guest user would see &quot;All&quot; and &quot;Customer&quot;.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>