force-app/main/default/objects/Krow__Task__c/fields/LeadRecordLink__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordLink__c</fullName>
    <label>Lead Link</label>
    <type>Url</type>
</CustomField>