force-app/main/default/objects/Krow__Task__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>used to filter display to assignees</inlineHelpText>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>