force-app/main/default/objects/Krow__Task__c/fields/Notify_Completion_to_Next_Task_Assignees__c.field-meta.xml
<CustomField>
    <fullName>Notify_Completion_to_Next_Task_Assignees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this task is marked as complete, a notification will be sent to assignees of dependent start to finish tasks.</inlineHelpText>
    <label>Notify Completion to Next Task Assignees</label>
    <type>Checkbox</type>
</CustomField>