force-app/main/default/objects/Krow__Task__c/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <formula>IF( Live__c, &quot;✅&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online</label>
    <type>Text</type>
</CustomField>