force-app/main/default/objects/Krow__Task__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>Owner:User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>