force-app/main/default/objects/Krow__Task__c/fields/Priority_Image__c.field-meta.xml
<CustomField>
    <fullName>Priority_Image__c</fullName>
    <formula>CASE(Krow__Priority__c, &quot;High&quot;,&quot;🔺 ‼️&quot;, &quot;Low&quot;, &quot;🔽&quot; ,&quot;🟢&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Image</label>
    <type>Text</type>
</CustomField>