force-app/main/default/objects/Krow__Task__c/fields/Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Link__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Krow__Project__c/&apos; &amp; Krow__Project__r.Id &amp; &apos;/view&apos;, Krow__Project__r.Name, &apos;_self&apos;)</formula>
    <label>Project Link</label>
    <type>Text</type>
</CustomField>