force-app/main/default/objects/Krow__Task__c/fields/Reccurences__c.field-meta.xml
<CustomField>
    <fullName>Reccurences__c</fullName>
    <label># Reccurences</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>