force-app/main/default/objects/Krow__Task__c/fields/Resources_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Resources_Assigned__c</fullName>
    <label>Resources Assigned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>