force-app/main/default/objects/Krow__Task__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>good to match phases. used to make bulk changes on the group</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Post Discovery Call</fullName>
            </value>
            <value>
                <fullName>Site Meeting</fullName>
            </value>
            <value>
                <fullName>Take Off</fullName>
            </value>
            <value>
                <fullName>Create Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Review Meeting</fullName>
            </value>
            <value>
                <fullName>Submit Proposal</fullName>
            </value>
            <value>
                <fullName>Change Proposal</fullName>
            </value>
            <value>
                <fullName>Resubmit Proposal</fullName>
            </value>
            <value>
                <fullName>Follow Up Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>