force-app/main/default/objects/Krow__Task__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>IF(TOD_Matters__c=True,Krow__Start_Time__c + &quot; - &quot; + Krow__End_Time__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>