force-app/main/default/objects/Krow__Task__c/fields/TOD_Matters__c.field-meta.xml
<CustomField>
    <fullName>TOD_Matters__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If it can happen any time of the day, leave unchecked and ignore the Time fields. Check, if the Start and End Times matter.</inlineHelpText>
    <label>Time of Day Matters</label>
    <type>Checkbox</type>
</CustomField>