force-app/main/default/objects/Krow__Task__c/fields/Update_Task__c.field-meta.xml
<CustomField>
    <fullName>Update_Task__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Krow__Task__c/&apos; &amp; Id &amp; &apos;/view&apos;, &apos;Link&apos;,&apos;_self&apos;)</formula>
    <label>Task Link</label>
    <type>Text</type>
</CustomField>