force-app/main/default/objects/Krow__Task__c/validationRules/Krow__Due_date_greater_then_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Due_date_greater_then_start_date</fullName>
    <active>true</active>
    <description>Task Due Date should not be less then start date</description>
    <errorConditionFormula>NOT(ISNULL(Krow__Start_Date__c)) &amp;&amp; NOT(ISNULL(Krow__Due_Date__c)) &amp;&amp; (Krow__Start_Date__c &gt; Krow__Due_Date__c)</errorConditionFormula>
    <errorDisplayField>Krow__Due_Date__c</errorDisplayField>
    <errorMessage>Task Due Date should not be less then start date</errorMessage>
</ValidationRule>