force-app/main/default/objects/Krow__Task__c/validationRules/Krow__Only_Task_Owner_can_complete_a_task.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Only_Task_Owner_can_complete_a_task</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Krow__Complete__c),Krow__Complete__c,OwnerId &lt;&gt; $User.Id,$Setup.Krow__Krow_User_Configuration__c.Krow__Project_Admin__c = false)</errorConditionFormula>
    <errorDisplayField>Krow__Percent_Complete__c</errorDisplayField>
    <errorMessage>Only the task owner can mark this task complete</errorMessage>
</ValidationRule>