force-app/main/default/objects/Krow__Task__c/validationRules/Krow__Project_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Project_match</fullName>
    <active>true</active>
    <description>Parent task must be from same project.</description>
    <errorConditionFormula>IF( AND( NOT(ISBLANK(Krow__Project__c)) ,NOT(ISBLANK(Krow__Parent_Task__r.Krow__Project__c))) , Krow__Project__c  &lt;&gt;  Krow__Parent_Task__r.Krow__Project__c, false)</errorConditionFormula>
    <errorDisplayField>Krow__Parent_Task__c</errorDisplayField>
    <errorMessage>Parent and child task must be from same project.</errorMessage>
</ValidationRule>