force-app/main/default/objects/Krow__Task__c/listViews/All_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Tasks</fullName>
    <columns>Update_Task__c</columns>
    <columns>NAME</columns>
    <columns>Resources_Assigned__c</columns>
    <columns>Krow__Predecessor_Tasks_Name__c</columns>
    <columns>Project_Link__c</columns>
    <columns>Krow__Project_Status__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Template_Project__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Archived</value>
    </filters>
    <filters>
        <field>Is_a_Parent_Task__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Milestone__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Tasks</label>
</ListView>