force-app/main/default/objects/Krow__Task__c/listViews/Tomorrow_and_Before_Tasks_Not_Live.listView-meta.xml
<ListView>
    <fullName>Tomorrow_and_Before_Tasks_Not_Live</fullName>
    <columns>Update_Task__c</columns>
    <columns>NAME</columns>
    <columns>Resources_Assigned__c</columns>
    <columns>Krow__Predecessor_Tasks_Name__c</columns>
    <columns>Project_Link__c</columns>
    <columns>Krow__Estimated_Hours__c</columns>
    <columns>Krow__Project_Status__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Task_Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>Krow__Template_Project__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Archived</value>
    </filters>
    <filters>
        <field>Live__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_a_Parent_Task__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Milestone__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Cold Lead</value>
    </filters>
    <label>Tomorrow and Before Tasks Not Live</label>
</ListView>